// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumbs > renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  display: inline;
}

.emotion-2[aria-current='page'] {
  color: #727683;
}

.emotion-2:not(:last-child)::after {
  content: '›';
  margin: 0 0.5rem;
}

.emotion-4 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-4 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-4>* {
  pointer-events: none;
}

.emotion-4:hover,
.emotion-4:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.emotion-4:hover .e1afnb7a2,
.emotion-4:focus .e1afnb7a2 {
  -webkit-transform: translate(-0.25rem, 0);
  -moz-transform: translate(-0.25rem, 0);
  -ms-transform: translate(-0.25rem, 0);
  transform: translate(-0.25rem, 0);
}

.emotion-4[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  background-color: #641cb3;
}

.emotion-4:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="emotion-0 emotion-1"
      >
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5"
            data-variant="standalone"
            href="/step1"
            variant="bodyStrong"
          >
            Step 1
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5"
            data-variant="standalone"
            href="/step1/step2"
            variant="bodyStrong"
          >
            I'm a very long... long long step
          </a>
        </li>
        <li
          aria-current="page"
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          Step 3
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumbs > renders correctly with invalid child 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="emotion-0 emotion-1"
      >
        Invalid child
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumbs > renders correctly with onClick 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  display: inline;
}

.emotion-2[aria-current='page'] {
  color: #727683;
}

.emotion-2:not(:last-child)::after {
  content: '›';
  margin: 0 0.5rem;
}

.emotion-2 {
  display: inline;
}

.emotion-2[aria-current='page'] {
  color: #727683;
}

.emotion-2:not(:last-child)::after {
  content: '›';
  margin: 0 0.5rem;
}

.emotion-4 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-4 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-4>* {
  pointer-events: none;
}

.emotion-4:hover,
.emotion-4:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.emotion-4:hover .e1afnb7a2,
.emotion-4:focus .e1afnb7a2 {
  -webkit-transform: translate(-0.25rem, 0);
  -moz-transform: translate(-0.25rem, 0);
  -ms-transform: translate(-0.25rem, 0);
  transform: translate(-0.25rem, 0);
}

.emotion-4[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  background-color: #641cb3;
}

.emotion-4:active {
  text-decoration-thickness: 2px;
}

.emotion-4 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-4 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-4>* {
  pointer-events: none;
}

.emotion-4:hover,
.emotion-4:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.emotion-4:hover .e1afnb7a2,
.emotion-4:focus .e1afnb7a2 {
  -webkit-transform: translate(-0.25rem, 0);
  -moz-transform: translate(-0.25rem, 0);
  -ms-transform: translate(-0.25rem, 0);
  transform: translate(-0.25rem, 0);
}

.emotion-4[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  background-color: #641cb3;
}

.emotion-4:active {
  text-decoration-thickness: 2px;
}

.emotion-10 {
  display: inline;
  cursor: pointer;
}

.emotion-10[aria-current='page'] {
  color: #727683;
}

.emotion-10:not(:last-child)::after {
  content: '›';
  margin: 0 0.5rem;
}

.emotion-10[aria-disabled="true"] {
  pointer-events: none;
}

<div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="emotion-0 emotion-1"
      >
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5"
            data-variant="standalone"
            href="/step1"
            variant="bodyStrong"
          >
            Step 1
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5"
            data-variant="standalone"
            href="/step1/step2"
            variant="bodyStrong"
          >
            I'm a very long... long long step
          </a>
        </li>
        <li
          aria-current="page"
          aria-disabled="false"
          class="emotion-10 emotion-3"
        >
          Step 3
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumbs > renders correctly with selected item 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  display: inline;
}

.emotion-2[aria-current='page'] {
  color: #727683;
}

.emotion-2:not(:last-child)::after {
  content: '›';
  margin: 0 0.5rem;
}

.emotion-4 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-4 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-4>* {
  pointer-events: none;
}

.emotion-4:hover,
.emotion-4:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.emotion-4:hover .e1afnb7a2,
.emotion-4:focus .e1afnb7a2 {
  -webkit-transform: translate(-0.25rem, 0);
  -moz-transform: translate(-0.25rem, 0);
  -ms-transform: translate(-0.25rem, 0);
  transform: translate(-0.25rem, 0);
}

.emotion-4[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  background-color: #641cb3;
}

.emotion-4:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="emotion-0 emotion-1"
      >
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5"
            data-variant="standalone"
            href="/step1"
            variant="bodyStrong"
          >
            Step 1
          </a>
        </li>
        <li
          aria-current="page"
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5"
            data-variant="standalone"
            href="/step1/step2"
            variant="bodyStrong"
          >
            I'm a very long... long long step
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          Step 3
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;
